@@ -12,8 +12,8 @@ Second Edition, Sage, 2011.
 \details{
 \tabular{ll}{
 Package: \tab car\cr
-Version: \tab 2.0-20\cr
-Date: \tab 2013/08/19\cr
+Version: \tab 2.0-19\cr
+Date: \tab 2013/08/26\cr
 Depends: \tab R (>= 2.14.0), stats, graphics, MASS, nnet\cr
 Suggests: \tab  alr3, boot, leaps, lme4, lmtest, nlme, quantreg, sandwich, mgcv, pbkrtest (>= 0.3-2), rgl, survival, survey\cr
 License: \tab GPL (>= 2)\cr
